k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: estri
  labels:
    app.kubernetes.io/name: estri
